Version 2.0.1
~~~~~~~~~~~~~
* Post DiFX-2.0.0
* add -v option to vexpeek
* move most strcpy to snprintf and make use of parameterized string lengths in difxio
* add recordEnable map to VexScan.

Version 2.0
~~~~~~~~~~~
* Jumped because in the mean-time difx-1.5 branch had gone to 1.1
* Includes the following corrections merged in from the 1.5 branch
  - Zero length scans are ignored
  - Warn if no clock values are applied on a job/antenna basis
  - oms2v2d: correct use of POLARIZATION
  - oms2v2d: respect TWEAK_INT_TIME parameter
  - oms2v2d: trap missing FFT_SIZE and SPECTRAL_AVERAGE parameters
* Also bugfixes related to variable initialisation
* Adds support for multiple phase centres
* Requires difxio 3.0
* Add support for VLBN "format" -- that is VLBA with no data modulation
* Use strict parsing by default
* Add deltaClock and deltaClockRate
* More user warnings
* Further fix to generated flags when an antenna is not in a job
* oms2v2d: trap missing FFT_SIZE and SPECTRAL_AVERAGE parameters
* Actually respect clock breaks!
* Fix some logic to avert some unneeded warnings
* Don't require DIFX_VERSION to be set
* Check that all supplied antenna, source, scan and mode names are in vex file
* Huge speed-up by not constantly sorting events
* Fix convergence problem when there is no time gap between modules
* Force v2d file to start with a letter
* oms2v2d: warn if both .skd and .vex are found; default to .vex
* Source names were confused: no distiction was made between the vex "def" name and the source name.  Fixed.
* Check for sources with illegal names
* Improved function/variable naming to indicate explicitly where some def names are used
* Vex loading error messages are slightly more useful
* Adapt to difxio changes where data source info was moved from antenna into datastream
* Support default ANTENNA setup in .v2d file
* Support new namings in difxio.  recChan -> recBand
* Fix year definition ( was correct in difx 1.5 for quite some time )